# SM-GVINS

./: README.md
config/: euroc_stereo_config.yaml  kitti_config00-02.yaml
output/: euroc_state.txt  kitti00.txt  ref_res.txt  ref_res_bufforce.txt  ref_res_lastframe.txt  res.txt  vins_visual.txt  vins_visual_ref.txt  vins_visual_ref1.txt  vins_visual_ref2.txt
scripts/plot/: plot_bgba.py  plot_traj.py  plot_trajs_2d.py  plot_trajs_3d.py
sm_gvins/: CMakeLists.txt  package.xml  test_fronted.cpp  test_kitti.cpp  test_track.cpp
sm_gvins/launch/: sm_gvins.launch
sm_gvins/sm_gvins/include/: estimator.h  g2o_types.h  imu_preinteg.h  parameters.h
sm_gvins/sm_gvins/include/common/: eigen_types.h
sm_gvins/sm_gvins/include/fronted/: camera.h  feature.h  keyframe.h  map.h  tracker.h
sm_gvins/sm_gvins/include/types/: gnss.h  image.h  imu.h  nav_state.h
sm_gvins/sm_gvins/include/utils/: math.h  timer.h  utils.h
sm_gvins/sm_gvins/include/visual/: camera.h  dataset.h  feature.h  frame.h  map.h  mappoint.h  orb_extractor.h  parameters.h  tracker.h
sm_gvins/sm_gvins/src/: estimator.cpp  imu_preinterg.cpp  parameters.cpp
sm_gvins/sm_gvins/src/fronted/: camera.cpp  keyframe.cpp  map.cpp  tracker.cpp
sm_gvins/sm_gvins/src/visual/: camera.cpp  dataset.cpp  frame.cpp  map.cpp  mappoint.cpp  orb_extractor.cpp  parameters.cpp  tracker.cpp
sm_gvins/sm_gvins_ros/: drawer_rviz.cpp  drawer_rviz.h  sm_gvins.cpp  sm_gvins.h
